tests/fail/bool_only_ident.rs
concat_idents::concat_idents!(fn_name = true {
    fn fn_name() {
        /* booleans are reserved key-words */
    }
});

fn main() {}
